force-app/main/default/objects/Approval_Request_Approver__c/Approval_Request_Approver__c.object-meta.xml
<CustomObject>
    <description>This object was created in tandem with the Approval Request object. It is a junction object between the Approval Request and User objects as 1 Approval Request can have multiple Approvers assigned to it.</description>
    <label>Approval Request Approver</label>
    <nameField>
        <label>Approver</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Request Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>