force-app/main/default/objects/Approval_Request_Approver__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approval Request Approvers</relationshipLabel>
    <relationshipName>Approval_Request_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>