force-app/main/default/objects/Approval_Request_Approver__c/fields/Amount1__c.field-meta.xml
<CustomField>
    <fullName>Amount1__c</fullName>
    <formula>TEXT( Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount1</label>
    <type>Text</type>
</CustomField>