force-app/main/default/objects/Approval_Request_Approver__c/fields/Annualized_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Sales__c</fullName>
    <formula>TEXT(Opportunity__r.Annualized_Sales__c)</formula>
    <label>Annualized Sales</label>
    <type>Text</type>
</CustomField>