force-app/main/default/objects/Approval_Request_Approver__c/fields/Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request__c</fullName>
    <label>Approval Request</label>
    <referenceTo>Approval_Request__c</referenceTo>
    <relationshipLabel>Approval Request Approvers</relationshipLabel>
    <relationshipName>Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>