force-app/main/default/objects/Approval_Request_Approver__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Site Specific</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>