force-app/main/default/objects/Approval_Request_Approver__c/fields/Decision_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decision_Comments__c</fullName>
    <label>Decision Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>