force-app/main/default/objects/Approval_Request_Approver__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>