force-app/main/default/objects/Approval_Request_Approver__c/fields/Delegated__c.field-meta.xml
<CustomField>
    <fullName>Delegated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will get set to true in the event the Approval Request Approver record gets delegated to the Original Approver&#39;s Delegated Approver.</description>
    <label>Delegated</label>
    <type>Checkbox</type>
</CustomField>