force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Merge_Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_Account_Name</label>
    <type>Text</type>
</CustomField>