force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Approval_Name__c.field-meta.xml
<CustomField>
    <fullName>Merge_Approval_Name__c</fullName>
    <formula>Approval_Request__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_Approval_Name</label>
    <type>Text</type>
</CustomField>