force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Approval_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Merge_Approval_Request_Name__c</fullName>
    <formula>Account__r.Name + &quot; - &quot; + &quot;Quote #&quot; + Quote__r.QuoteNumber + &quot; Approval Request&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_Approval_Request_Name</label>
    <type>Text</type>
</CustomField>