force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Merge_EBITDA__c</fullName>
    <formula>Opportunity__r.EBITDA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>