force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Merge_Opportunity_ID__c</fullName>
    <formula>Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_Opportunity_ID</label>
    <type>Text</type>
</CustomField>