force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Merge_Owner_Name__c</fullName>
    <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_Owner_Name</label>
    <type>Text</type>
</CustomField>