force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Quote_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Merge_Quote_Created_Date__c</fullName>
    <formula>Quote__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Created Date</label>
    <type>Date</type>
</CustomField>