force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Merge_Quote_ID__c</fullName>
    <formula>Quote__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge_Quote_ID</label>
    <type>Text</type>
</CustomField>