force-app/main/default/objects/Approval_Request_Approver__c/fields/Merge_Quote_Submission_Comments__c.field-meta.xml
<CustomField>
    <fullName>Merge_Quote_Submission_Comments__c</fullName>
    <formula>Approval_Request__r.Submission_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge Quote Submission Comments</label>
    <type>Text</type>
</CustomField>