force-app/main/default/objects/Approval_Request_Approver__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Approval Request Approvers</relationshipLabel>
    <relationshipName>Approval_Request_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>