force-app/main/default/objects/Approval_Request_Approver__c/fields/Original_Approver__c.field-meta.xml
<CustomField>
    <fullName>Original_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that would originally be assigned as the Approver the Approval Request based on the Approval Matrix. However, they have set the Delegated Approver on their User record and delegated their approval responsibility.</description>
    <inlineHelpText>The User that would originally be assigned as the Approver the Approval Request based on the Approval Matrix. However, they have set the Delegated Approver on their User record and delegated their approval responsibility.</inlineHelpText>
    <label>Original Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Request_Approvers1</relationshipName>
    <type>Lookup</type>
</CustomField>