force-app/main/default/objects/Approval_Request_Approver__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volume not sufficient</fullName>
            </value>
            <value>
                <fullName>Margin is not sufficient</fullName>
            </value>
            <value>
                <fullName>Not Aligned with Business Strategy</fullName>
            </value>
            <value>
                <fullName>Lack of capacity</fullName>
            </value>
            <value>
                <fullName>Lack of capability</fullName>
            </value>
            <value>
                <fullName>Needs more information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>