force-app/main/default/objects/Approval_Request_Approver__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <formula>Requestor__r.FirstName + &quot; &quot; +  Requestor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Name</label>
    <type>Text</type>
</CustomField>