force-app/main/default/objects/Approval_Request_Approver__c/fields/Resubmission_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resubmission_Comments__c</fullName>
    <label>Resubmission Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>