force-app/main/default/objects/Approval_Request_Approver__c/validationRules/Require_Comments_for_Rejection.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Comments_for_Rejection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Decision__c),
    ISPICKVAL(Decision__c, &quot;Rejected&quot;),
    ISBLANK(Decision_Comments__c)
)</errorConditionFormula>
    <errorDisplayField>Decision_Comments__c</errorDisplayField>
    <errorMessage>You must provide a Decision Comment before you can reject the Approval Request</errorMessage>
</ValidationRule>