force-app/main/default/objects/Approval_Request_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Quote__c</columns>
    <columns>Decision__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>